app2-dply-srv-ing.yaml
kind: Pod
apiVersion: v1
metadata:
  name: app2-deploy
  labels:
    app: app2
spec:
  containers:
    - name: app2
      image: hashicorp/http-echo:0.2.3
      args:
        - "-text=Hello World! This is Kubernetes kind running an echo App 2"
---
kind: Service
apiVersion: v1
metadata:
  name: app2-service
spec:
  selector:
    app: app2
  ports:
    - port: 5678
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2-ingress
spec:
  rules:
    - host: teresa2x3
      http:
        paths:
          - pathType: Prefix
            path: "/app2"
            backend:
              service:
                name: app2-service
                port:
                  number: 5678
---
